8334484: [lworld] new translation strategy for instance field initializers
Reviewed-by: mcimadamore